# bin

./: .gitignore  Cargo.toml  Dockerfile  README.md  bin-api.service  justfile  store.json
db/: schema.sql
src/: io.rs  main.rs
templates/: 404.html  500.html  base.html  edit.html  index.html  paste.html  pastes.html
