[package]
name = "bin"
version = "2.0.1"
description = "a paste bin."
repository = "https://github.com/w4/bin"
license = "WTFPL OR 0BSD"
authors = ["Jordan Doyle <jordan@doyle.la>"]
edition = "2021"

[dependencies]
argh = "0.1"
log = "0.4"
pretty_env_logger = "0.5"
linked-hash-map = "0.5"
once_cell = "1.19"
parking_lot = { version = "0.12", features = ["serde"] }
bytes = { version = "1.2", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = { version = "0.8" }
gpw = "0.1"
actix = "0.13"
actix-web = "4.4"
htmlescape = "0.3"
askama = "0.12"
bat = "0.24"
syntect = "5.1"
tokio = { version = "1.35", features = ["sync"] }
futures = "0.3"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "chrono"] }
chrono = "0.4"
actix-files = "0.6.6"
rust-embed = "8.7.0"

[profile.release]
lto = true
codegen-units = 1
incremental = false

[badges]
travis-ci = { repository = "w4/bin" }
is-it-maintained-issue-resolution = { repository = "w4/bin" }
is-it-maintained-open-issues = { repository = "w4/bin" }
maintenance = { status = "passively-maintained" }
